<resources>
    <string name="app_name">onlineVideo</string>
    <string name="suggestion">推 荐</string>
    <string name="video">热 榜</string>
    <string name="news">资 讯</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="categoryName">类别名称</string>
    <string name="videoName">我心里危险的东西</string>
    <string name="homePage">广 场</string>
    <string name="friends">任 务</string>
    <string name="mine">我 的</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="watch_history">观看历史</string>
    <string name="my_chase_videos">我的追剧</string>
    <string name="task_center">任务中心</string>
    <string name="my_like">我的喜欢</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_sign_in">我的签到</string>
    <string name="feedback">反馈与投诉</string>
    <string name="video_desc">剧集视频内容详细介绍</string>
    <string name="videolistname">剧集显示</string>
    <string name="hotVideos">热门推荐</string>
    <string name="videoHistory">播放历史</string>
    <string name="myCatchVideos">我的追剧</string>
    <string name="videoSearch">剧集分类</string>
    <string name="my_point">我的看点</string>
    <string name="zero">0</string>
    <string name="recharge">去充值></string>
    <string name="my_wallet">我的钱包</string>
    <string name="withdrawals">去提现></string>
    <string name="good_video_to_look">好剧看不停</string>
    <string name="selectVideos">选 集</string>
    <string name="privacy_policy">
    <![CDATA[
        <h2>隐私政策</h2>
        <p>欢迎使用我们的应用！在开始使用之前，请仔细阅读本隐私政策。</p>
        <p>我们非常重视您的隐私，本隐私政策解释了我们收集、使用和保护您在使用本应用时提供给我们的个人信息。</p>
        <h3>收集的信息</h3>
        <p>在使用本应用时，我们可能会收集以下类型的信息：</p>
        <ul>
            您提供的个人身份信息，例如姓名、电子邮件地址等。
            设备信息，例如设备型号、操作系统版本等。
            应用使用数据，例如您的操作行为、访问时间等。
        </ul>
        <h3>信息使用</h3>
        <p>我们收集的信息将用于以下目的：</p>
        <ul>
            向您提供、维护和改进本应用的服务。
            处理您的请求和反馈。
            向您发送与应用相关的通知和更新。
        </ul>
        <h3>信息共享</h3>
        <p>我们不会与任何第三方分享您的个人信息，除非：</p>
        <ul>
            您明确同意共享。
            根据法律法规的要求。
        </ul>
        <h3>信息保护</h3>
        <p>我们采取适当的技术和组织措施来保护您的个人信息的安全性。</p>
        <h3>联系我们</h3>
        <p>如果您对本隐私政策有任何疑问或意见，请通过以下方式与我们联系：</p>
        <p>Email: privacy@example.com</p>
    ]]>
</string>
    <string name="randomLook">找 剧</string>

</resources>