<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        tools:context=".fragment.TaskCenterFragment">

    <!-- 看点和钱包信息 -->
    <androidx.cardview.widget.CardView
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/task_button_purple"
            app:cardUseCompatPadding="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:text="@string/my_point" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:text="@string/zero" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:text="@string/recharge" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:text="@string/my_wallet" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:text="@string/zero" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:text="@string/withdrawals" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--  任务中心文本  -->
    <TextView
            android:id="@+id/task_center_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@id/info_layout"
            android:text="@string/task_center"
        android:background="@drawable/background_border"/>

    <!-- 任务中心列表 -->
    <androidx.cardview.widget.CardView
            android:id="@+id/task_center_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="7dp"
            app:cardElevation="5dp"
            android:layout_marginBottom="2dp"
            android:layout_below="@id/task_center_text"
            app:cardUseCompatPadding="true">

        <!-- 任务信息 -->
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/task_center_info_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:scrollbars="none" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>