<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        tools:context=".fragment.HomePageFragment">
    <!-- Banner视图 -->
    <androidx.cardview.widget.CardView
            android:id="@+id/banner_layout"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="190dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

        <com.youth.banner.Banner
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <!--  剧集操作菜单 //隐藏了不要 -->
    <LinearLayout
            android:id="@+id/video_operate_menu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/banner_layout"
            android:orientation="horizontal"
            android:visibility="gone">

        <!--  剧集分类  -->
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/video_sift_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/video_sift" />

            <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="16sp"
                    android:layout_marginTop="3dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/videoSearch" />

        </LinearLayout>

        <!--  我的追剧  -->
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/my_catch_video"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/my_chase_videos" />

            <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="16sp"
                    android:layout_marginTop="3dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/myCatchVideos" />

        </LinearLayout>

        <!--  播放历史  -->
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/video_play_history"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/play_history" />

            <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="16sp"
                    android:layout_marginTop="3dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/videoHistory" />

        </LinearLayout>

    </LinearLayout>

    <!-- 热门推荐分类标题 -->
    <TextView
            android:id="@+id/hot_recycler_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:textColor="#4444FF"
            android:textStyle="bold"
            android:layout_below="@id/video_operate_menu"
            android:text="@string/hotVideos" />

    <!-- 热门推荐内容 -->
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hot_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hot_video_layout_height"
            android:layout_below="@id/hot_recycler_title"
            android:layout_marginStart="@dimen/hot_video_marginStart"
            android:layout_marginEnd="@dimen/hot_video_marginEnd"
            android:orientation="horizontal" />

    <!-- 热门推荐分类标题 -->
    <TextView
            android:id="@+id/good_video_to_look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textColor="#4444FF"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:layout_below="@id/hot_recycler_view"
            android:text="@string/good_video_to_look" />

    <!-- 类别 -->
    <LinearLayout
            android:id="@+id/category_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/good_video_to_look"
            android:orientation="vertical">

        <!-- 类别内容 -->
        <GridView
                android:id="@+id/video_sift_grid"
                android:layout_width="match_parent"
                android:scrollbars="none"
                android:layout_marginStart="@dimen/good_video_start_dp"
                android:layout_marginEnd="@dimen/good_video_end_dp"
                android:layout_height="wrap_content"
                android:numColumns="3" />
    </LinearLayout>

</RelativeLayout>